<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--androidx.constraintlayout.widget.ConstraintLayout-->

    <!--
    библиотека для обрезки фото
-->

    <com.example.recognition.ZoomableImageView
        android:id="@+id/zoomableImageView"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_weight="1"
        app:cropMinCropResultHeightPX="10"
        app:cropMinCropResultWidthPX="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/selectPhoto"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="12dp"
        android:text="@string/selectPhoto"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent" />

    <!--<Button
        android:id="@+id/drawBlocks"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="6dp"
        android:text="@string/printText"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/makePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/makePhoto"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="6dp"
        android:text="@string/makePhoto"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/selectPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/imageView"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="400dp"
        android:layout_height="175dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zoomableImageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addItem"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="12dp"
        android:text="@string/addItem"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/further"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="6dp"
        android:text="@string/further"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/addItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zoomableImageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/quantity"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zoomableImageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nextBlock"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="6dp"
        android:text="@string/nextBlock"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/makePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="1dp"
        android:text="@string/cost"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zoomableImageView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>